fix(MobileLayout): bottom of screen cut off on mobile fix

--- a/assets/css/modules/_layout.scss
+++ b/assets/css/modules/_layout.scss
@@ -93,6 +93,6 @@
 @media (max-width:480px) {
   .main-container {
     background: transparent;
-    height: calc(100% - 110px);
+    height: calc(100% - 145px);
   }
 }
